--- a/app/src/main/res/layout/fragment_second_graph_nav.xml
+++ b/app/src/main/res/layout/fragment_second_graph_nav.xml
@@ -6,26 +6,23 @@
     tools:context=".ui_fragments.graphnavigation.SecondGraphNav">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/second_graph_blank_fragment"
-        android:gravity="center"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/navGraphDataTextView"
-        android:layout_gravity="center"
-        android:layout_marginTop="50sp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:id="@+id/toFirstButton"
+        android:id="@+id/toContactsFragment"
+        android:text="Контакты"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/toVerstka"
         android:layout_marginTop="100sp"
-        android:text="nav to 1 frag"
+        android:text="Верстка"
         />
 
 
