service+worker notification

--- a/app/src/main/res/layout/fragment_second_graph_nav.xml
+++ b/app/src/main/res/layout/fragment_second_graph_nav.xml
@@ -25,5 +25,14 @@
         android:text="Верстка"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:id="@+id/toWorker"
+        android:layout_marginTop="200sp"
+        android:text="Воркер"
+        />
+
 
 </FrameLayout>
