--- a/app/src/main/res/navigation/nav_graph2.xml
+++ b/app/src/main/res/navigation/nav_graph2.xml
@@ -30,6 +30,9 @@
         <action
             android:id="@+id/navToWorkerFragment"
             app:destination="@id/firstNotificationFragment"/>
+        <action
+            android:id="@+id/navToFragmentRetrofit"
+            app:destination="@id/fragmentRetrofit" />
     </fragment>
     <fragment
         android:id="@+id/firstNotificationFragment"
@@ -50,5 +53,19 @@
             app:argType="integer"
             />
     </fragment>
+    <fragment
+        android:id="@+id/fragmentRetrofit"
+        android:name="com.odsstudio.contactsbook.ui_fragments.retrofin_fragments.FragmentRetrofit"
+        android:label="fragment_retrofit"
+        tools:layout="@layout/fragment_retrofit" >
+        <action
+            android:id="@+id/navToFragmentCustomDialog"
+            app:destination="@id/fragmentCustomDialog" />
+    </fragment>
+    <dialog
+        android:id="@+id/fragmentCustomDialog"
+        android:name="com.odsstudio.contactsbook.ui_fragments.retrofin_fragments.FragmentCustomDialog"
+        android:label="fragment_custom_dialog"
+        tools:layout="@layout/fragment_custom_dialog" />
 
 </navigation>
